--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ packaging==23.2
 python-dotenv==1.0.1
 Werkzeug==3.0.1
 zipp==3.13.0
+Flask-WTF==1.2.1
+Flask-SQLAlchemy==3.0.3
+SQLAlchemy==2.0.4 
